change information profile vet

--- a/koi-vet-app/src/pages/VetProfile/VetProfile.css
+++ b/koi-vet-app/src/pages/VetProfile/VetProfile.css
@@ -42,7 +42,8 @@
   }
   
   /* Nút "Previous Step" */
-  .vet-profile-previous {
+  .vet-profile-previous,
+  .vet-profile-edit {
     background-color: var(--color-primary); 
     color: white; /* Màu chữ */
     border: none;
@@ -53,7 +54,8 @@
     transition:  0.3s ease, transform 0.3s ease, box-shadow 0.3s ease; 
   }
   
-  .vet-profile-previous:hover {
+  .vet-profile-previous:hover,
+  .vet-profile-edit:hover {
     background-color: var(--color-primary); 
     color: white; /* Màu chữ */
     border: none;
@@ -106,3 +108,5 @@
   h5{
     text-transform: capitalize;
   }
+
+  
