--- a/koi-vet-app/src/pages/Rating/Rating.css
+++ b/koi-vet-app/src/pages/Rating/Rating.css
@@ -1,4 +1,4 @@
-/* .session-card{
+.session-card{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -163,4 +163,6 @@
 
   .rating-container .home-btn:hover {
     background-color: #e0e0e0;
-  } */
+  }
+
+  
