--- a/koi-vet-app/src/pages/NewsPage/NewsPage.css
+++ b/koi-vet-app/src/pages/NewsPage/NewsPage.css
@@ -8,6 +8,20 @@
   .news-card-news-page {
     flex: 1 1 calc(50% - 16px); /* Chiều rộng 50% trừ khoảng cách */
     max-width: calc(50% - 16px);
+    display: flex;
+    flex-direction: column;
+  }
+
+  .news-card-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .news-card-content .p-4 {
+    flex-grow: 1;
+    padding: 1rem;
+    margin-bottom: 0;
   }
 
   .banner-container {
