Update Information of  Header and Footer

--- a/koi-vet-app/src/components/Header/index.html
+++ b/koi-vet-app/src/components/Header/index.html
@@ -23,18 +23,18 @@
             <div class="col-md-8 row justify-content-end">
                 <div class="col-md-3">
                     <i class="fas fa-phone-alt"></i>
-                    <div class="text">EMERGENCY</div>
-                    <div class="contact-info">(237) 681-812-255</div>
+                    <div class="text">Phone Number</div>
+                    <div class="contact-info">(0123) 456789 </div>
                 </div>
                 <div class="col-md-3">
                     <i class="fas fa-clock"></i>
                     <div class="text">WORK HOUR</div>
-                    <div class="contact-info">09:00 - 20:00 Everyday</div>
+                    <div class="contact-info">09:00 - 17:00 Everyday</div>
                 </div>
                 <div class="col-md-3">
                     <i class="fas fa-map-marker-alt"></i>
                     <div class="text">LOCATION</div>
-                    <div class="contact-info">0123 Some Place</div>
+                    <div class="contact-info">FPT University </div>
                 </div>
             </div>
 
