--- a/koi-vet-app/src/index.css
+++ b/koi-vet-app/src/index.css
@@ -38,6 +38,11 @@ body {
   border-color: var(--color-primary) !important;
   color: #fff !important;
 }
+.ant-btn-variant-solid ,.ant-switch-checked{
+  background-color:var(--color-primary) !important;
+  border-color: var(--color-primary) !important;
+  color: #fff !important;
+}
 .Mui-completed {
   color: var(--color-primary) !important;
 }
